lib/src/compiler/tests/testdata/errors/78.out
error[E001]: syntax error
 --> line:1:28
  |
1 | rule test { strings: $a = {} condition: true }
  |                            ^ unexpected closing brace `}`
  |